Refactor: replace repeated "error" literals with constant, use Stream.toList(), remove comments